languages/montiarcautomaton-fe/src/test/resources/invalid/InvalidDatatypes.cd
package invalid;

classdiagram InvalidDatatypes {
  enum invalidType {A, B, C;} // lower case name
}